--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -29,5 +30,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/classmate-1.3.4.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-validator-6.0.8.Final.jar"/>
+	<classpathentry kind="lib" path="libs/javax.el-3.0.1-b09.jar"/>
+	<classpathentry kind="lib" path="libs/jboss-logging-3.3.2.Final.jar"/>
+	<classpathentry kind="lib" path="libs/validation-api-2.0.1.Final.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
